# localwatcher

./: .gitignore  CMakeLists.txt  COLLECT_ARCHITECTURE.md  README.md
include/: logger.h  process_collector.h
src/: logger.cpp  main.cpp  process_collector.cpp
